Make sure missing feed-icons keep alignment.
Missing feed-icons take 16px as well to avoid alignment glitches in feed list.

--- a/tt-rss.css
+++ b/tt-rss.css
@@ -856,6 +856,7 @@ img.feedIcon, img.tinyFeedIcon {
 	width : 16px;
 	height : 16px;
 	vertical-align : middle;
+	display : inline-block;
 }
 
 .dijitDialog .dijitToolbar {
